--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -21,36 +21,36 @@
 
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-12">
-				<br><h3>Cadastro de Eventos</h3><br>
+			<div class="col-sm-12" >
+				<br><h3>Detalhe do Evento</h3><br>
 				<hr>
 				
-				 <form method="post">
+				 <form method="post" th:each="evento:${evento}">
 				    <div class="form-group">
 				      <label for="nome">Nome:</label>
-				      <input type="text" class="form-control" id="nome" name="nome">
+				      <input type="text" class="form-control" id="nome" name="nome"  th:value="${evento.nome}"	>
 				    </div>
 				    
 				    
 				     <div class="form-group">
 				      <label for="local">local:</label>
-				      <input type="text" class="form-control" id="local" name="local">
+				      <input type="text" class="form-control" id="local" name="local" th:value="${evento.local}">
 				    </div>
 				    
 				     <div class="form-group">
 				      <label for="data">Data:</label>
-				      <input type="date" class="form-control" id="data" name="data">
+				      <input type="date" class="form-control" id="data" name="data" th:value="${evento.data}">
 				    </div>
 				    
 				     <div class="form-group">
 				      <label for="usr">Horário:</label>
-				      <input type="text" class="form-control" id="horario" name="horario">
+				      <input type="text" class="form-control" id="horario" name="horario" th:value="${evento.horario}">
 				    </div>
 				    
 				    
 				    
 				   
-				    <button type="submit" class="btn btn-primary">Salvar Evento</button>
+				    <button type="submit" class="btn btn-primary">Editar Evento</button>
 				  </form>				
 								
 				
