inclusão da tabela convidado

--- a/src/main/resources/templates/evento/eventos.html
+++ b/src/main/resources/templates/evento/eventos.html
@@ -40,7 +40,12 @@
 					<td th:text="${evento.local}"></td>
 					<td th:text="${evento.data}"></td>
 					<td th:text="${evento.horario}"></td>
-					<td></td>
+					<td>
+					  
+					  <a class="btn btn-success" href=""> Editar</a>
+					  <a class="btn btn-warning" href=""> Excluir</a>
+					
+					</td>
 				</tr>
 			</tbody>
 		</table>
