--- a/src/main/resources/templates/evento/detalhesEvento.html
+++ b/src/main/resources/templates/evento/detalhesEvento.html
@@ -20,42 +20,55 @@
 
 
 	<div class="container">
+		
+		<br>
+				<h3>Detalhe do Evento</h3>
+				
+				<hr />
+		
 		<div class="row">
-			<div class="col-sm-12" >
-				<br><h3>Detalhe do Evento</h3><br>
-				<hr>
+			<div class="col-sm-6">
 				
-				 <form method="post" th:each="evento:${evento}">
-				    <div class="form-group">
-				      <label for="nome">Nome:</label>
-				      <input type="text" class="form-control" id="nome" name="nome"  th:value="${evento.nome}"	>
-				    </div>
-				    
-				    
-				     <div class="form-group">
-				      <label for="local">local:</label>
-				      <input type="text" class="form-control" id="local" name="local" th:value="${evento.local}">
-				    </div>
-				    
-				     <div class="form-group">
-				      <label for="data">Data:</label>
-				      <input type="date" class="form-control" id="data" name="data" th:value="${evento.data}">
-				    </div>
-				    
-				     <div class="form-group">
-				      <label for="usr">Horário:</label>
-				      <input type="text" class="form-control" id="horario" name="horario" th:value="${evento.horario}">
-				    </div>
-				    
-				    
-				    
-				   
-				    <button type="submit" class="btn btn-primary">Editar Evento</button>
-				  </form>				
-								
+
+				<p>
+					Evento: <span th:text="${evento.nome}"> </span>
+				</p>
+				<p>
+					Local: <span th:text="${evento.local}"> </span>
+				</p>
+				<p>
+					Data do evento: <span th:text="${evento.data}"> </span>
+				</p>
+				<p>
+					Horário: <span th:text="${evento.horario}"> </span>
+				</p>
 				
-				
-				
+
+
+			</div>
+
+		</div>
+		
+		<hr />
+
+		<div id="row">
+			<div class="col-sm-8">
+				<form method="post">
+					<div class="form-group">
+						<label for="nome">Convidado:</label> <input type="text"
+							class="form-control" id="nomeConvidado" name="nomeConvidado">
+					</div>
+
+
+					<div class="form-group">
+						<label for="local">RG:</label> <input type="text"
+							class="form-control" id="rg" name="rg">
+					</div>
+
+
+					<button type="submit" class="btn btn-primary">Adicionar</button>
+				</form>
+
 			</div>
 
 		</div>
