--- a/src/main/resources/templates/evento/formEvento.html
+++ b/src/main/resources/templates/evento/formEvento.html
@@ -1,20 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br"xmlns:"http://thymeleaf.org"
 	xmlns:"http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-
-<title>Eventos App</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet"
-	href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script
-	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-</head>
+	
+<div th:replace="fragments/layout/header :: header"></div>
+<title>Cadastro</title>
 
 <body>
 
