--- a/src/main/resources/templates/evento/eventos.html
+++ b/src/main/resources/templates/evento/eventos.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="pt-br"xmlns:"http://thymeleaf.org"
+<html lang="pt-br" xmlns:"http://thymeleaf.org"
 	xmlns:"http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
 <title>Eventos App</title>
@@ -37,13 +37,13 @@
 
 				<tr th:each="evento : ${eventos}">
 					<td > <a th:href="@{/detalhesEvento/{codigo}(codigo = ${evento.codigo}) }"><span th:text="${evento.nome}"></span></a></td>
-					<td th:text="${evento.local}"></td>
+					<td th:text="${evento.local}">   </td>
 					<td th:text="${evento.data}"></td>
 					<td th:text="${evento.horario}"></td>
 					<td>
 					  
-					  <a class="btn btn-success" href=""> Editar</a>
-					  <a class="btn btn-warning" href=""> Excluir</a>
+					 
+					  <a class="btn btn-warning" th:href="@{/deletarEvento/{codigo}(codigo = ${evento.codigo}) }"> Excluir</a>
 					
 					</td>
 				</tr>
