--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,8 +14,17 @@
 
 	<div class="jumbotron text-center">
 		<h1>Eventos</h1>
-		<a href="/cadastrarEvento" class="btn btn-primary">Cadastrar
-			Eventos</a>
+		
+		<br><br>
+		
+		<a href="/cadastrarEvento" class="btn btn-primary">
+			Cadastrar Eventos
+		</a>
+		
+		<a href="/eventos" class="btn btn-primary">
+			Listagem dos Eventos
+		</a>
+		
 	</div>
 
 	<div class="container">
